# silmarils-paper

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: BENCHMARK.md  field_bench.rs  signature_bench.rs
src/: lib.rs  main.rs  shamir.rs  signature.rs
